minigame-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minigame-service
  namespace: lkhintibidze
spec:
  selector:
    app: minigame
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
