minigame-istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: minigame-gateway
  namespace: lkhintibidze
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - minigame.apps.osh.devops.tbc
      port:
        name: http
        number: 80
        protocol: HTTP
